[PACA-690] Capture RecordSource data